<resources>
    <string name="app_name">Máy đo nhiệt độ</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_person_info">Thông tin bệnh nhân</string>
    <string name="ho_ten">Họ tên</string>
    <string name="ngay_sinh">Ngày sinh</string>
    <string name="ngay_do">Ngày đo</string>
    <string name="dia_chi">Địa chỉ</string>
    <string name="trieu_chung">Triệu chứng</string>
    <string name="so_dien_thoai">Số điện thoại</string>
    <string name="ben_trai">Bên trái</string>
    <string name="ben_phai">Bên phải</string>
    <string name="tieu_truong">Tiểu trường</string>
    <string name="tam">Tâm</string>
    <string name="tam_tieu">Tam tiêu</string>
    <string name="tam_bao">Tâm bào</string>
    <string name="dai_truong">Đại trường</string>
    <string name="phe">Phế</string>
    <string name="bang_quang">Bàng quang</string>
    <string name="than">Thận</string>
    <string name="dom">Đởm</string>
    <string name="vi">Vị</string>
    <string name="can">Can</string>
    <string name="ti">Tì</string>
    <string name="ket_qua_bang">Kết quả bảng</string>
    <string name="xem_bieu_do">Xem biểu đồ</string>
    <string name="bieu_do_mot_cot">Một cột</string>
    <string name="bieu_do_hai_cot">Hai cột</string>
    <string name="bat_dau_do">Bắt đầu đo</string>
    <string name="do_moi">Đo mới</string>
    <string name="so_sanh">So sánh</string>
    <string name="xong">Xong</string>
    <string name="luu_anh">Lưu ảnh</string>
    <string name="about_us">Phần mềm dựa trên phương pháp đo kinh lạc của Lương Y Lê Văn Sửu. Được phát triển bởi Vũ Đức Đại( fb: Gõ Kiến Dũng Cảm) và Phạm Văn Quân( đại học Bách Khoa Hà Nội)</string>
    <string name="guideline">Hướng dẫn sử dụng đang được cập nhật. Sẽ hoàn thành trong thời gian sớm nhất</string>
    <string name="title_activity_input">Nhập thông tin</string>
    <string name="title_activity_about_us">Giới thiệu</string>
    <string name="title_activity_guideline">Hướng dẫn</string>
    <string name="title_activity_chart">Biểu đồ</string>
    <string name="title_activity_table">Kết quả bảng</string>
    <string name="title_activity_ho_so">Danh sách hồ sơ</string>
    <string name="title_activity_danh_sach_ho_so">Danh bạ hồ sơ</string>
    <string name="title_activity_list_resume">Danh bạ hồ sơ</string>
    <string name="title_activity_dong_benh_nhan">DongBenhNhan</string>
    <string name="title_activity_ho_so_benh_nhan">Hồ sơ</string>
    <string name="title_activity_dong_lan_do">DongLanDo</string>
    <string name="title_activity_compare_two_chart">Biểu đồ so sánh</string>
    <string name="title_activity_screen_shot">ScreenShot</string>
    <string name="title_activity_compare_chart">Biểu đồ so sánh</string>
    <string name="title_activity_char_personal">CharPersonal</string>

</resources>
