<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/chartZoom"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tv_trieu_chung_c" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bieu_do_mot_cot"
        android:id="@+id/btnMotCot"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bieu_do_hai_cot"
        android:id="@+id/btnHaiCot"
        android:layout_alignTop="@+id/btnMotCot"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onClick" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/xong"
        android:id="@+id/btnXong"
        android:onClick="onClick"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ho_ten"
        android:id="@+id/tv_ho_ten"
        android:layout_below="@+id/btnMotCot"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/dia_chi"
        android:id="@+id/tv_dia_chi_c"
        android:layout_below="@+id/tv_ho_ten"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/ngay_sinh"
        android:id="@+id/tv_ngay_sinh_c"
        android:layout_above="@+id/tv_dia_chi_c"
        android:layout_alignRight="@+id/btnHaiCot"
        android:layout_alignEnd="@+id/btnHaiCot"
        android:layout_alignLeft="@+id/btnXong"
        android:layout_alignStart="@+id/btnXong" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/trieu_chung"
        android:id="@+id/tv_trieu_chung_c"
        android:layout_below="@+id/tv_dia_chi_c"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/so_dien_thoai"
        android:id="@+id/tv_so_dien_thoai_c"
        android:layout_below="@+id/tv_ngay_sinh_c"
        android:layout_alignRight="@+id/chartZoom"
        android:layout_alignEnd="@+id/chartZoom"
        android:layout_alignLeft="@+id/tv_ngay_sinh_c"
        android:layout_alignStart="@+id/tv_ngay_sinh_c" />

</RelativeLayout>