<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".domoi.PersonInfo"
    tools:showIn="@layout/activity_person_info">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bắt đầu đo"
        android:id="@+id/btnBatDauDo"
        android:layout_marginBottom="43dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editText_ho_ten"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/btnBatDauDo"
        android:layout_alignEnd="@+id/btnBatDauDo"
        android:filterTouchesWhenObscured="false"
        android:hint="@string/ho_ten" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_ngay_sinh"
        android:layout_below="@+id/editText_ho_ten"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_ho_ten"
        android:layout_alignEnd="@+id/editText_ho_ten"
        android:hint="@string/ngay_sinh" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:ems="10"
        android:id="@+id/editText_dia_chi"
        android:layout_below="@+id/editText_ngay_sinh"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_ngay_sinh"
        android:layout_alignEnd="@+id/editText_ngay_sinh"
        android:hint="@string/dia_chi" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/editText_trieu_chung"
        android:layout_below="@+id/editText_ngay_do"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_ngay_do"
        android:layout_alignEnd="@+id/editText_ngay_do"
        android:hint="@string/trieu_chung" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:ems="10"
        android:id="@+id/editText_so_dien_thoai"
        android:layout_below="@+id/editText_dia_chi"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/editText_dia_chi"
        android:layout_alignEnd="@+id/editText_dia_chi"
        android:hint="@string/so_dien_thoai" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editText_ngay_do"
        android:layout_below="@+id/editText_so_dien_thoai"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/ngay_do" />
</RelativeLayout>
