<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".domoi.Input"
    tools:showIn="@layout/activity_input">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewTieuTruong"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/tieu_truong"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextTieuTruong"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ben_trai"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextTieuTruong_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ben_phai"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewTam"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/tam"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextTam"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextTam_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewTamTieu"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/tam_tieu"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextTamTieu"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextTamTieu_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewTamBao"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/tam_bao"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextTamBao"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextTamBao_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewDaiTruong"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/dai_truong"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextDaiTruong"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextDaiTruong_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewPhe"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/phe"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextPhe"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextPhe_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text=" "
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewBangQuang"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/bang_quang"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextBangQuang"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ben_trai"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextBangQuang_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/ben_phai"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewThan"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/than"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextThan"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextThan_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewDom"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/dom"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextDom"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextDom_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewVi"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/vi"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextVi"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextVi_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCan"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/can"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextCan"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal"></EditText>

            <EditText
                android:id="@+id/EditTextCan_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TextViewTi"
                android:layout_width="145dp"
                android:layout_height="wrap_content"
                android:text="@string/ti"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <EditText
                android:id="@+id/EditTextTi"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />

            <EditText
                android:id="@+id/EditTextTi_"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <Button
            android:id="@+id/btnKetQuaBang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ket_qua_bang"
            android:nestedScrollingEnabled="false"
            android:onClick="onClick" />
        <Button
            android:id="@+id/btnXemBieuDo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/xem_bieu_do"
            android:onClick="onClick" />
    </LinearLayout>

</ScrollView>